--- a/frontend-react/src/pages/Arena.css
+++ b/frontend-react/src/pages/Arena.css
@@ -4,7 +4,7 @@
   color: #fff;
   display: flex;
   flex-direction: column;
-  overflow: hidden;
+  overflow: clip;
   position: relative;
 }
 
